.metals/.reports/metals/r_scala-toplevel-mtags_1690105950098
id: file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_6/Q1.scala:[1482..1483) in Input.VirtualFile("file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_6/Q1.scala", "object Q1{
    def main(args: Array[String]) : Unit ={
        // Encryption
        var encrypt : Array[Char] = Encryption("I Love You!");
        for(i <- encrypt){
            print(i);
        }
        println(" ");

        //Decryption     
        var decrypt : Array[Char] = Decryption(encrypt);
        for(i <- decrypt){
            print(i);
        }
        println(" ");



    }

    def Encryption(str:String):Array[Char]={
        var encryptData: Array[Char] = Array();
        for(i <- str){
            if(i == ' '){
                encryptData = encryptData :+ i; //Appending an element to the old array
            }
            else{
                encryptData = encryptData :+ (i.toInt + 1).toChar //Appending an element to the old array
            }
        }

        // for(i <- encryptData){
        //     print(i);
        // }
        return encryptData

    }

    def Decryption(str:Array[Char]):Array[Char]={
        var decryptData: Array[Char] = Array();
        for(i <- str){
            if(i == ' '){
                decryptData = decryptData :+ i; //Appending an element to the old array
            }
            else{
                decryptData = decryptData :+ (i.toInt - 1).toChar //Appending an element to the old array
            }
        }

        // for(i <- decryptData){
        //     print(i);
        // }
        return decryptData;
    }

    def 
    def 
    
}
")
file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_6/Q1.scala:59: error: expected identifier; obtained rbrace
}
^